# xkx2001-utf8

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  PROGRESS.md  justfile
engine/: .env.example  .gitignore  README.md  pyproject.toml
engine/data/: m1_default_scene.yaml  m2_mvp_scene.yaml  xingxiu_mechanics.yaml
engine/prototypes/ecs_ugc/: README.md  model.py  tui.py
engine/scenes/academy_micro/: manifest.yaml  npcs.yaml  rooms.yaml  rules.yaml
engine/scenes/age_of_sail_micro/: manifest.yaml  npcs.yaml  rooms.yaml  rules.yaml
engine/scenes/bibles/: xueshan.yaml
engine/scenes/wuxia_beijing/: items.yaml  manifest.yaml
engine/scenes/wuxia_changbai/: items.yaml  manifest.yaml
engine/scenes/wuxia_city/: items.yaml  manifest.yaml
engine/scenes/wuxia_common/: items.yaml  manifest.yaml
engine/scenes/wuxia_dali/: items.yaml  manifest.yaml
engine/scenes/wuxia_emei/: items.yaml  manifest.yaml
engine/scenes/wuxia_foshan/: items.yaml  manifest.yaml
engine/scenes/wuxia_gaibang/: items.yaml  manifest.yaml
engine/scenes/wuxia_hangzhou/: items.yaml  manifest.yaml
engine/scenes/wuxia_heimuya/: items.yaml  manifest.yaml
engine/scenes/wuxia_jiaxing/: manifest.yaml
engine/scenes/wuxia_kunlun/: manifest.yaml
engine/scenes/wuxia_micro/: manifest.yaml  npcs.yaml  rooms.yaml  rules.yaml
engine/scenes/wuxia_qilian/: items.yaml  manifest.yaml
engine/scenes/wuxia_quanzhou/: items.yaml  manifest.yaml
engine/scripts/: verify_harness.py  verify_m1_items.py  verify_m1_nature.py  verify_m1_npc.py  verify_m2_combat.py  verify_m2_economy.py  verify_m2_faction.py  verify_m2_journey.py  verify_m2_travel.py  verify_m3_pack_loop.py  verify_polishing.py  verify_pre_m4_room_fidelity.py  verify_pre_m4_xingxiu_mechanics.py
engine/src/mud_engine/: ai.py  (+38 more)
engine/tests/: test_academy_e2e.py  test_account_service.py  test_age_of_sail_e2e.py  test_aggro.py  test_apprentice.py  test_bai_c_main.py  test_bboard_c_do_read.py  test_bboard_commands.py  test_benchmark.py  test_callout_translation.py  test_capability_token.py  test_center_c_do_check_menpai_job.py  test_channel_chat_system.py  test_char_c_setup.py  test_character_growth.py  test_chard.py  test_cli.py  test_cli_weapon_wiring.py  test_cmp_wiz_level.py  test_combat.py  test_combat_engagement.py  test_combat_events_contract.py  test_combat_modifier.py  test_combat_sim.py  test_combat_system.py  test_command_hooks.py  test_command_pipeline.py  test_commands.py  test_condition_types.py  test_conditions.py  test_conformance.py  test_connection_system.py  test_content_gen.py  test_content_review.py  test_cpk.py  test_cpk_loader.py  test_currency_shop.py  test_daemon_store.py  test_damage_c_die.py  test_day_shop.py  (+147 more)
engine/tools/: armor_extract.py  armor_finalize.py  batch_cost.py  benchmark.py  load_test.py  measure_revision.py  weapon_extract.py  weapon_finalize.py
(+835 files in other folders)
