[project]
name = "mud-engine"
version = "0.1.0"
description = "题材无关的核心 MUD 引擎（M1 绿场重写）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "gukt" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mud_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["mud_engine"]
